--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,16 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorGray">#808080</color>
+    <color name="colorRed">#ff0000</color>
+    <color name="colororange">#ff4000</color>
+    <color name="colorSky">#00ffff</color>
+    <color name="colorGreen">#40ff00</color>
+    <color name="colorYellow">#ffff00</color>
+    <color name="colorBlue">#0000ff</color>
+    <color name="colorPink">#ff00ff</color>
+    <color name="colorPurple">#8000ff</color>
+
 </resources>
