--- a/app/src/main/res/layout/main_recycleview.xml
+++ b/app/src/main/res/layout/main_recycleview.xml
@@ -1,42 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    <LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
-                  android:background="@color/colorPrimary">
+                  android:background="@color/colorGray">
 
         <LinearLayout   android:layout_width="match_parent"
                         android:layout_height="85dp"
                         android:orientation="vertical"
-                        android:background="@color/colorAccent"
+                        android:background="@color/colorWhite"
                         android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="5dp"
                         android:layout_marginRight="10dp"
-                        android:layout_marginBottom="10dp">
+                        android:layout_marginBottom="3dp">
 
             <TextView
                     android:id="@+id/text_topic"
-                    android:layout_width="330dp"
+                    android:layout_width="310dp"
                     android:layout_height="25dp"
                     android:paddingLeft="10dp"
-                    android:paddingTop="5dp"
+                    android:paddingTop="4dp"
                     android:text="HI I'm Pokkao"
                     android:textSize="15dp"
                     android:maxLength="35"
                     android:textStyle="bold"/>
 
-            <View android:layout_width="330dp"
+            <View android:layout_width="310dp"
                   android:layout_height="1dp"
                   android:background="@color/colorBlack">
             </View>
 
             <TextView
                     android:id="@+id/text_sub_content"
-                    android:layout_width="330dp"
+                    android:layout_width="310dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
                     android:text="context"
@@ -44,4 +41,3 @@
                     android:maxLength="35"/>
         </LinearLayout>
     </LinearLayout>
-</RelativeLayout>
