--- a/app/src/main/res/layout/main_recycleview.xml
+++ b/app/src/main/res/layout/main_recycleview.xml
@@ -7,7 +7,7 @@
                   android:background="@color/colorGray">
 
         <LinearLayout   android:layout_width="match_parent"
-                        android:layout_height="85dp"
+                        android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:background="@color/colorWhite"
                         android:layout_marginLeft="10dp"
@@ -15,19 +15,28 @@
                         android:layout_marginRight="10dp"
                         android:layout_marginBottom="3dp">
 
+            <ImageView
+                       android:id="@+id/Image_topic"
+                       android:layout_width="320dp"
+                       android:layout_height="180dp"
+                       android:layout_gravity="center"
+                       android:layout_marginTop="5dp"
+                       android:background="@color/colorGray"/>
+
             <TextView
                     android:id="@+id/text_topic"
                     android:layout_width="310dp"
                     android:layout_height="25dp"
-                    android:paddingLeft="10dp"
+                    android:paddingLeft="13dp"
                     android:paddingTop="4dp"
                     android:text="HI I'm Pokkao"
                     android:textSize="15dp"
-                    android:maxLength="35"
+                    android:maxLength="40"
                     android:textStyle="bold"/>
 
-            <View android:layout_width="310dp"
+            <View android:layout_width="300dp"
                   android:layout_height="1dp"
+                  android:layout_marginLeft="10dp"
                   android:background="@color/colorBlack">
             </View>
 
@@ -35,9 +44,9 @@
                     android:id="@+id/text_sub_content"
                     android:layout_width="310dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="1dp"
+                    android:layout_marginLeft="10dp"
                     android:text="context"
                     android:padding="4dp"
-                    android:maxLength="35"/>
+                    android:maxLength="85"/>
         </LinearLayout>
     </LinearLayout>
