--- a/app/src/main/res/layout/fragment_page_news.xml
+++ b/app/src/main/res/layout/fragment_page_news.xml
@@ -15,6 +15,7 @@
     <FrameLayout
             android:id="@+id/fragment_profile_news"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"/>
 
 </FrameLayout>
