--- a/app/src/main/res/layout/fragment_page_news2.xml
+++ b/app/src/main/res/layout/fragment_page_news2.xml
@@ -1,14 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
+             android:layout_width="wrap_content"
              android:layout_height="match_parent"
-             tools:context=".PageNews">
+             android:background="@color/colorWhite"
+             android:layout_centerHorizontal="true"
+             android:clickable="true"
+             android:focusable="true">
 
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"
-            android:background="@color/colororange"/>
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="vertical">
 
+        <ImageView
+                   android:id="@+id/im_page_topic"
+                   android:layout_width="405dp"
+                   android:layout_height="220dp"
+                   android:layout_gravity="center"
+                   android:background="@color/colorGray"/>
+
+            <RelativeLayout
+                            android:id="@+id/relative_content"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                <TextView
+                        android:id="@+id/text_page_topic"
+                        android:layout_width="385dp"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="13dp"
+                        android:paddingTop="6dp"
+                        android:paddingBottom="5dp"
+                        android:text="HI I'm Pokkao"
+                        android:textSize="16dp"
+                        android:textStyle="bold"
+                        android:maxLength="55"
+                        android:background="@color/natural_green"/>
+                <View
+                        android:id="@+id/lines2"
+                        android:layout_width="430dp"
+                        android:layout_height="1dp"
+                        android:layout_below="@id/text_page_topic"
+                        android:background="@color/colorBlack"/>
+
+                <TextView
+                        android:id="@+id/tv_description"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/lines2"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginLeft="10dp"
+                        android:textSize="14dp"
+                        android:text="DESCRIPTION "
+                        android:textStyle="bold"
+                        android:background="@color/colorPrimary"/>
+
+                <TextView
+                        android:id="@+id/tv_page_desc"
+                        android:layout_width="370dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:text="context"
+                        android:layout_below="@id/tv_description"
+                        android:layout_marginRight="8dp"
+                        android:padding="4dp"
+                        android:background="@color/dark_honest_green"/>
+
+                <TextView
+                        android:id="@+id/tx_content"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/tv_page_desc"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginLeft="10dp"
+                        android:textSize="14dp"
+                        android:textStyle="bold"
+                        android:text="CONTENT"
+                        android:background="@color/colorPrimary"/>
+
+                <TextView
+                        android:id="@+id/tv_content"
+                        android:layout_width="370dp"
+                        android:layout_height="wrap_content"
+                        android:padding="4dp"
+                        android:layout_below="@id/tx_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="8dp"
+                        android:textSize="14dp"
+                        android:text="CONTENT"
+                        android:background="@color/dark_honest_green"/>
+
+                <View
+                        android:id="@+id/line4"
+                        android:layout_width="370dp"
+                        android:layout_height="1dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_below="@id/tv_content"
+                        android:background="@color/colorBlack"/>
+
+                <TextView
+                        android:id="@+id/tv_link"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/line4"
+                        android:text="Click Link to read more.. "
+                        android:textStyle="bold"
+                        android:layout_marginLeft="10dp" />
+
+                <TextView
+                          android:id="@+id/tv_url"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:layout_below="@id/tv_link"
+                          android:layout_marginLeft="20dp"
+                          android:text="http//:google.com"
+                          android:layout_marginRight="20dp"
+                          android:clickable="true"/>
+
+            </RelativeLayout>
+
+                 <RelativeLayout android:layout_width="match_parent"
+                                 android:layout_height="wrap_content"
+                                 android:layout_marginRight="10dp"
+                                 android:layout_marginTop="7dp"
+                                 android:layout_marginBottom="5dp">
+
+                    <TextView
+                            android:id="@+id/tv_page_realtime_date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentBottom="true"
+                            android:maxLength="10"
+                            android:textSize="13dp"
+                            android:text="date"/>
+
+                    <TextView
+                            android:id="@+id/tv_date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:maxLength="10"
+                            android:text="DATE : "
+                            android:textSize="13dp"
+                            android:layout_alignParentBottom="true"
+                            android:layout_toStartOf="@id/tv_page_realtime_date"
+                            android:layout_toLeftOf="@id/tv_page_realtime_date"/>
+
+                         <TextView
+                                   android:id="@+id/tv_slas"
+                                   android:layout_width="wrap_content"
+                                   android:layout_height="wrap_content"
+                                   android:text="|"
+                                   android:textStyle="bold"
+                                   android:layout_alignParentBottom="true"
+                                   android:layout_toLeftOf="@id/tv_date"
+                                   android:layout_marginRight="15dp"/>
+
+                     <TextView
+                             android:id="@+id/tv_page_author"
+                             android:layout_width="wrap_content"
+                             android:layout_height="wrap_content"
+                             android:maxLength="10"
+                             android:textSize="13dp"
+                             android:text="author"
+                             android:layout_alignParentBottom="true"
+                             android:layout_toLeftOf="@id/tv_date"
+                             android:layout_marginRight="30dp"/>
+
+                     <TextView
+                             android:id="@+id/tv_author"
+                             android:layout_width="wrap_content"
+                             android:layout_height="wrap_content"
+                             android:maxLength="10"
+                             android:text="Author : "
+                             android:textSize="13dp"
+                             android:layout_alignParentBottom="true"
+                             android:layout_toLeftOf="@id/tv_page_author"/>
+
+
+                </RelativeLayout>
+
+    </LinearLayout>
 </FrameLayout>
