--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,119 @@
     <color name="jet_black">#222222</color>
     <color name="space_gray">#949494</color>
     <color name="little_light_gray">#f3f3f3</color>
+
+
+
+
+
+    <color name="colorBulePrimary">#3F51B5</color>
+    <color name="colorBluePrimaryDark">#303F9F</color>
+    <color name="colorAccentSoft">#FF4081</color>
+
+    <color name="colorViolet">#751BA2</color>
+    <color name="nav_button">#007AFF</color>
+    <color name="default_link">#0000EE</color>
+    <color name="colorGreenSwitch">#4BD964</color>
+    <color name="colorGreenDisable">#A3A3A3</color>
+    <color name="bg_directory">#F8F8F8</color>
+    <color name="color_text_hint_search_map">#D0D0D0</color>
+    <color name="color_tab_status_register_waiting">#D6F5FF</color>
+    <color name="color_text_button_login">#29AAE1</color>
+    <color name="color_selector_click_profile">#007AFF</color>
+
+
+    <color name="transparent">#00ffffff</color>
+    <color name="black_theme_word">#4B4B4B</color>
+    <color name="tab_community_indicator">#29AAE1</color>
+    <color name="tab_profile_indicator">#007AFF</color>
+    <color name="color_button_event_calendar">#29AAE1</color>
+    <color name="color_button_event_calendar_diaable">#8029AAE1</color>
+    <color name="bg_reservation">#29AAE1</color>
+    <color name="colorCalendarBefAf">#b1acac</color>
+
+    <color name="black_opacity05">#aa000000</color>
+    <color name="black_opacity10">#72000000</color>
+    <color name="black_opacity40">#40666666</color>
+    <color name="black_opacity50">#80000000</color>
+    <color name="black_opacity60">#99000000</color>
+    <color name="black_opacity80">#CC000000</color>
+    <color name="black_opacity90">#E6000000</color>
+    <color name="gray_common">#FF808080</color>
+    <color name="gray_common_switch">#7B7B7B</color>
+    <color name="white_opacity10">#10cccccc</color>
+    <color name="white_opacity40">#40cccccc</color>
+    <color name="white_opacity50">#80cccccc</color>
+    <color name="white_opacity60">#99cccccc</color>
+    <color name="white_opacity80">#CCcccccc</color>
+    <color name="white_opacity90">#E6cccccc</color>
+
+    <color name="line_color_university">#D5D5D5</color>
+    <color name="dialog_error_selector_color">#108769</color>
+
+    <color name="tab_selected_dialog">#FCFAFA</color>
+    <color name="common_text_color">#484848</color>
+    <color name="color_default_directory_bottom">#108769</color>
+    <color name="color_default_directoty_line">#BEBEBE</color>
+    <color name="gray_text_item">#9B9B9B</color>
+    <color name="semester_bg_term">#FFE200</color>
+    <color name="semester_data_name">#108769</color>
+    <color name="button_verify_2facoty">#FFD800</color>
+    <color name="green_line">#2F977D</color>
+    <color name="line_bus_gray">#95989A</color>
+    <color name="inactive_dialog_classinfo_transcript">#555555</color>
+    <color name="auto_complete_text">#4E4E4E</color>
+    <color name="line_auto_complete">#D8D8D8</color>
+    <color name="cb_button_hint">#30977E</color>
+    <color name="gray_button">#797979</color>
+    <color name="color_default_cancel_delete_event">#434343</color>
+    <color name="color_default_save_delete_event">#38B700</color>
+    <color name="color_default_text_term_condition">#626262</color>
+    <color name="color_default_text_calendar">#9A9598</color>
+    <color name="color_added_already_main_menu">#D9AC32</color>
+    <color name="color_preload_main_menu_shimmer">#a2c6b8b8</color>
+    <color name="fab_color_create_event_calendar">#29AAE1</color>
+    <color name="current_day_background_color">#B1BA1D</color>
+    <color name="calendar_current_selected_day_background_color">#9A9598</color>
+    <color name="color_error_server_internal">#d00000</color>
+    <color name="color_skip_for_now">#D5D5D5</color>
+    <color name="color_sync_add_contact">#CBCBCB</color>
+    <color name="text_color_logout">#007AFF</color>
+    <color name="color_item_directory_each_page">#898989</color>
+    <color name="color_error_message">#D00000</color>
+    <color name="color_bar_error">#BF0909</color>
+    <color name="color_line_about">#E5E5E5</color>
+    <color name="inactive_button_event_type">#707070</color>
+    <color name="inactive_alert_bubble">#F2F2F2</color>
+    <color name="pay_by_scb">#4A2986</color>
+
+    <color name="tab_register_indicator">#72CEEA</color>
+
+    <color name="color_register_status_bg_pending">#FFF7C9</color>
+    <color name="color_register_status_bg_waiting_payment">#D6F5FF</color>
+    <color name="color_register_status_bg_verify">#FFF7C9</color>
+    <color name="color_register_status_bg_paid">#EBFFEB</color>
+    <color name="color_register_status_bg_overdue">#FFD0CE</color>
+    <color name="color_register_status_bg_failed">#FFD0CE</color>
+
+    <color name="color_register_status_tv_pending">#EAC700</color>
+    <color name="color_register_status_tv_waiting_payment">#29AAE1</color>
+    <color name="color_register_status_tv_verify">#EAC700</color>
+    <color name="color_register_status_tv_paid">#01AC0E</color>
+    <color name="color_register_status_tv_overdue">#FF0000</color>
+    <color name="color_register_status_tv_failed">#FF0000</color>
+
+    <color name="color_dialog_confirm_password_tv">#007AFF</color>
+    <color name="color_dialog_confirm_password_desc">#9B9B9B</color>
+    <color name="color_dialog_confirm_password_subdesc">#9B9B9B</color>
+    <color name="text_light_gray">#C7C7C7</color>
+    <color name="yellow_maybe_active">#FFB100</color>
+    <color name="bg_invitee_gray">#F7F7F7</color>
+    <color name="bg_invitee_line_gray">#E8E8E8</color>
+    <color name="line_sepreate_button">#E3E3E3</color>
+    <color name="color_register_money">#888888</color>
+
+    <color name="cray_dark">#747474</color>
+    <color name="line_frame_scan_qr">#AFAFAF</color>
+    <color name="color_suggest_qr_refresh">#C3C3C3</color>
+    <color name="green_dialog_text">#009688</color>
 </resources>
