--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         tools:context=".MainActivity">
 
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/my_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                style="@style/HeaderBar"
+                app:theme="@style/AppTheme"
+                android:elevation="4dp">
+
+                <TextView
+                          android:id="@+id/tv_toolbar"
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:text="@string/app_main"
+                          android:textStyle="bold"
+                          android:textColor="@color/colorWhite"
+                          android:textSize="19sp"/>
+        </android.support.v7.widget.Toolbar>
 
         <FrameLayout
                 android:id="@+id/fragment_page_news"
@@ -14,4 +32,4 @@
                 android:layout_height="match_parent"
                 android:background="@color/colorGray"/>
 
-</RelativeLayout>
+</LinearLayout>
