--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,12 @@
         <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
 
+    <style name="HeaderBar">
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="ToolbarApp" parent="AppSplashTheme">
+        <item name="android:windowBackground">@color/colorPrimary</item>
+    </style>
+
 </resources>
