--- a/app/src/main/res/layout/main_recycleview.xml
+++ b/app/src/main/res/layout/main_recycleview.xml
@@ -4,25 +4,25 @@
                 android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
-                  android:background="@color/calendar_current_selected_day_background_color">
+                  android:background="@color/white_opacity80">
 
         <LinearLayout
                 android:id="@+id/rv_item_news"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="@color/colorWhite"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="3dp">
+                android:background="@drawable/layout_bg_corner"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginBottom="2dp">
 
             <ImageView
                        android:id="@+id/Image_topic"
-                       android:layout_width="320dp"
+                       android:layout_width="wrap_content"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
-                       android:layout_marginTop="5dp"
+                       android:layout_marginTop="10dp"
                        android:background="@color/colorGray"/>
 
         <RelativeLayout android:layout_width="wrap_content"
@@ -42,7 +42,7 @@
                     android:id="@+id/text_topic"
                     android:layout_width="330dp"
                     android:layout_height="25dp"
-                    android:paddingLeft="13dp"
+                    android:paddingLeft="15dp"
                     android:paddingTop="4dp"
                     android:text="HI I'm Pokkao"
                     android:textSize="15dp"
@@ -54,7 +54,7 @@
                     android:id="@+id/lines1"
                     android:layout_width="320dp"
                   android:layout_height="1dp"
-                  android:layout_marginLeft="10dp"
+                  android:layout_marginLeft="13dp"
                   android:layout_alignBottom="@id/text_topic"
                   android:background="@color/colorBlack"
                     android:layout_toLeftOf="@id/bt_ic_starborder">
@@ -64,7 +64,7 @@
                     android:id="@+id/text_sub_content"
                     android:layout_width="320dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="13dp"
                     android:text="context"
                     android:layout_below="@id/lines1"
                     android:padding="4dp"
@@ -74,7 +74,8 @@
 
                 <RelativeLayout android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginRight="5dp">
+                                android:layout_marginRight="8dp"
+                                android:layout_marginBottom="4dp">
 
                     <TextView
                             android:id="@+id/Realtime_date"
