--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,12 +18,14 @@
 
                 <TextView
                           android:id="@+id/tv_toolbar"
-                          android:layout_width="wrap_content"
+                          android:layout_width="285dp"
                           android:layout_height="wrap_content"
                           android:text="@string/app_main"
                           android:textStyle="bold"
                           android:textColor="@color/colorWhite"
-                          android:textSize="19sp"/>
+                          android:textSize="19sp"
+                          android:ellipsize="end"
+                          android:maxLines="1"/>
         </android.support.v7.widget.Toolbar>
 
         <FrameLayout
