--- a/app/src/main/res/layout/main_recycleview.xml
+++ b/app/src/main/res/layout/main_recycleview.xml
@@ -42,19 +42,21 @@
                     android:id="@+id/text_topic"
                     android:layout_width="330dp"
                     android:layout_height="25dp"
-                    android:paddingLeft="15dp"
+                    android:paddingLeft="17dp"
                     android:paddingTop="4dp"
                     android:text="HI I'm Pokkao"
                     android:textSize="15dp"
-                    android:maxLength="45"
+                    android:ellipsize="end"
+                    android:maxLines="1"
                     android:textStyle="bold"
+                    android:textColor="@color/black_opacity05"
                     android:layout_toLeftOf="@id/bt_ic_starborder"/>
 
             <View
                     android:id="@+id/lines1"
                     android:layout_width="320dp"
                   android:layout_height="1dp"
-                  android:layout_marginLeft="13dp"
+                  android:layout_marginLeft="14dp"
                   android:layout_alignBottom="@id/text_topic"
                   android:background="@color/colorBlack"
                     android:layout_toLeftOf="@id/bt_ic_starborder">
