increate NavigationView(menu,main_activity) on MainActivity

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,7 +8,8 @@
             android:id="@+id/action_favorite"
             android:orderInCategory="300"
             android:title="User"
-            android:icon="@drawable/ic_kotlin"
+            android:icon="@drawable/ic_brightness_medium_black"
             app:showAsAction="ifRoom"/>
+
 
 </menu>
