--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical"
+        android:id="@+id/drawer_layout"
         tools:context=".module.activity.MainActivity">
 
-        <android.support.v7.widget.Toolbar
-                android:id="@+id/my_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                style="@style/HeaderBar"
-                app:theme="@style/AppTheme"
-                android:elevation="4dp">
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:orientation="vertical">
 
-                <TextView
-                          android:id="@+id/tv_toolbar"
-                          android:layout_width="285dp"
-                          android:layout_height="wrap_content"
-                          android:text="@string/app_main"
-                          android:textStyle="bold"
-                          android:textColor="@color/colorWhite"
-                          android:textSize="19sp"
-                          android:ellipsize="end"
-                          android:maxLines="1"/>
-        </android.support.v7.widget.Toolbar>
+                <android.support.v7.widget.Toolbar
+                        android:id="@+id/my_toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        style="@style/HeaderBar"
+                        app:theme="@style/AppTheme"
+                        android:elevation="4dp">
 
-        <FrameLayout
-                android:id="@+id/fragment_page_news"
-                android:layout_width="match_parent"
+                        <ImageView
+                                    android:id="@+id/bt_option_menu"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/ic_menu_white"
+                                    android:layout_marginRight="15dp"
+                                    android:clickable="true"/>
+
+                        <TextView
+                                  android:id="@+id/tv_toolbar"
+                                  android:layout_width="265dp"
+                                  android:layout_height="wrap_content"
+                                  android:text="@string/app_main"
+                                  android:textStyle="bold"
+                                  android:textColor="@color/colorWhite"
+                                  android:textSize="18.5dp"
+                                  android:ellipsize="end"
+                                  android:maxLines="1"/>
+                </android.support.v7.widget.Toolbar>
+
+                <FrameLayout
+                        android:id="@+id/fragment_page_news"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/colorGray"/>
+
+        </LinearLayout>
+
+        <android.support.design.widget.NavigationView
+                android:id="@+id/nav_view"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@color/colorGray"/>
+                android:layout_gravity="start"
+                android:fitsSystemWindows="true"
+                app:menu="@menu/menu"
+                app:headerLayout="@layout/layout_navigation_header" />
 
-
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
