--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,8 @@
     <style name="AppTheme.colorPrimaryDark">
         <item name="colorAccent">@color/colorPrimaryDark</item>
     </style>
+
+    <style name="Bgnavigative" parent="HeaderBar">
+        <item name="colorAccent">@color/white_opacity80</item>
+    </style>
 </resources>
