--- a/app/src/main/res/drawable/layout_bg_corner.xml
+++ b/app/src/main/res/drawable/layout_bg_corner.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FCFAFA"/>
-    <stroke android:width="4dp" android:color="#72000000" />
+    <solid android:color="#f3f3f3"/>
+    <stroke android:width="4dp" android:color="#f3f3f3" />
     <corners android:radius="10dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
