--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,24 +21,40 @@
                         app:theme="@style/AppTheme"
                         android:elevation="4dp">
 
-                        <ImageView
-                                    android:id="@+id/bt_option_menu"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:src="@drawable/ic_menu_white"
-                                    android:layout_marginRight="15dp"
-                                    android:clickable="true"/>
+                        <RelativeLayout android:layout_width="wrap_content"
+                                      android:layout_height="wrap_content">
+                                <ImageView
+                                            android:id="@+id/bt_option_menu"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:src="@drawable/ic_menu_white"
+                                            android:layout_marginRight="14dp"
+                                            android:layout_marginTop="3dp"
+                                            android:clickable="true"/>
 
-                        <TextView
-                                  android:id="@+id/tv_toolbar"
-                                  android:layout_width="265dp"
-                                  android:layout_height="wrap_content"
-                                  android:text="@string/app_main"
-                                  android:textStyle="bold"
-                                  android:textColor="@color/colorWhite"
-                                  android:textSize="18.5dp"
-                                  android:ellipsize="end"
-                                  android:maxLines="1"/>
+                                <TextView
+                                          android:id="@+id/tv_toolbar"
+                                          android:layout_width="247dp"
+                                          android:layout_height="wrap_content"
+                                          android:layout_toRightOf="@id/bt_option_menu"
+                                          android:text="@string/app_main"
+                                          android:textStyle="bold"
+                                          android:textColor="@color/colorWhite"
+                                          android:textSize="20dp"
+                                          android:ellipsize="end"
+                                          android:maxLines="1"/>
+
+                                <ImageView
+                                        android:id="@+id/bt_option_night_mode"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_alignParentRight="true"
+                                        android:layout_marginRight="15dp"
+                                        android:layout_marginTop="3dp"
+                                        android:src="@drawable/ic_brightness_medium_black"
+                                        android:clickable="true"
+                                        android:visibility="invisible"/>
+                        </RelativeLayout>
                 </android.support.v7.widget.Toolbar>
 
                 <FrameLayout
