--- a/app/src/main/res/layout/fragment_page_news.xml
+++ b/app/src/main/res/layout/fragment_page_news.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/white_opacity80">
+                    android:background="@color/line_color_university">
 
 
         <TextView
@@ -26,7 +26,7 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorGray"
+                android:background="@color/line_color_university"
                 android:layout_below="@id/tv_all_news">
         </android.support.v7.widget.RecyclerView>
 
