--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<tool:menu xmlns:android="http://schemas.android.com/apk/res/android"
+           xmlns:tool="http://schemas.android.com/tools"
+           tool:showIn="nav_view">
+
 
     <group android:checkableBehavior="single">
         <item android:id="@+id/menu_my_favorite"
               android:title="My Favorite"
-                android:icon="@drawable/ic_check_starborder"/>
+              android:icon="@drawable/ic_check_starborder"/>
 
     </group>
 
-    <item android:title="Information">
-        <group android:checkableBehavior="single">
-            <item   android:id="@+id/menu_my_other"
-                    android:title="Other"
-                    android:icon="@drawable/ic_content_paste"/>
-            <item
-                    android:id="@+id/menu_my_setting"
-                    android:title="Setting"
-                    android:icon="@drawable/ic_settings"/>
+    <item android:title="Other">
+        <menu >
+            <group android:checkableBehavior="single">
 
-        </group>
+                <item android:id="@+id/menu_my_other"
+                      android:title="Report a Problem"
+                      android:icon="@drawable/ic_content_paste"/>
+                <item
+                        android:id="@+id/menu_my_setting"
+                        android:title="Setting"
+                        android:icon="@drawable/ic_settings"/>
+            </group>
+        </menu>
     </item>
-</menu>
+</tool:menu>
