keep status button in recyclerView

--- a/app/src/main/res/drawable/im_follow_star_news.xml
+++ b/app/src/main/res/drawable/im_follow_star_news.xml
@@ -2,8 +2,9 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/ic_check_starborder"
-          android:state_selected="false"/>
+          android:state_pressed="false"/>
     <item android:drawable="@drawable/ic_check_star"
           android:state_selected="true"/>
-    <item android:drawable="@drawable/ic_check_starborder"/>
+    <item android:drawable="@drawable/ic_check_starborder"
+          android:state_selected="false"/>
 </selector>
